force-app/main/default/objects/Logistics_Financials__c/Logistics_Financials__c.object-meta.xml
<CustomObject>
    <label>Logistics Financials</label>
    <nameField>
        <displayFormat>LF-{000000}</displayFormat>
        <label>Logistics Financial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logistics Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>