force-app/main/default/objects/Logistics_Financials__c/fields/Actuals_Link__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Link__c</fullName>
    <formula>HYPERLINK(
&quot;/lightning/r/Report/00OJw00000CiSvCMAV/view?&quot;
&amp;&quot;&amp;fv0=&quot;
&amp;Event__r.Event_Year_Text__c 
&amp;&quot;&amp;fv1=&quot;
&amp;Event__r.GL_Account__r.Name 
&amp;&quot;&amp;fv2=&quot;
&amp;TEXT(Category__c)
,
&quot;View Details&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals Link</label>
    <type>Text</type>
</CustomField>