force-app/main/default/objects/Logistics_Financials__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/V</fullName>
            </value>
            <value>
                <fullName>Advisory Board Meetings</fullName>
            </value>
            <value>
                <fullName>Advisory Board Travel</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Caterer</fullName>
            </value>
            <value>
                <fullName>Decorator</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Event Parking (Sponsor)</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Interpreter</fullName>
            </value>
            <value>
                <fullName>Keynote (Fee + Travel)</fullName>
            </value>
            <value>
                <fullName>Lanyards</fullName>
            </value>
            <value>
                <fullName>Moderator(s) + Travel</fullName>
            </value>
            <value>
                <fullName>Notebooks</fullName>
            </value>
            <value>
                <fullName>Parking (Not Sponsored)</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Plants</fullName>
            </value>
            <value>
                <fullName>Power Banks</fullName>
            </value>
            <value>
                <fullName>Program Printing</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Shipping Fees</fullName>
            </value>
            <value>
                <fullName>Signage</fullName>
            </value>
            <value>
                <fullName>Staff Travel</fullName>
            </value>
            <value>
                <fullName>Stage Sign</fullName>
            </value>
            <value>
                <fullName>Temp Fees</fullName>
            </value>
            <value>
                <fullName>Temps</fullName>
            </value>
            <value>
                <fullName>Travel Scholarships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>