force-app/main/default/objects/Logistics_Financials__c/fields/Estimated_Cost_History__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_History__c</fullName>
    <description
  >Running history of all of the changes to the estimated cost for this budget category for this event.</description>
    <inlineHelpText
  >Running history of all of the changes to the estimated cost for this budget category for this event.</inlineHelpText>
    <label>Estimated Cost History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>