force-app/main/default/objects/Logistics_Financials__c/fields/Last_Year_Actual__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Actual__c</fullName>
    <inlineHelpText
  >This comes from the Actual Cost field in Logistics Financials matching categories for the Last Year Event linked to this Event record.</inlineHelpText>
    <label>Last Year Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>