force-app/main/default/objects/Logistics_Financials__c/fields/Next_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Budget__c</fullName>
    <label>Next Year Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>