force-app/main/default/objects/Logistics_Financials__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <inlineHelpText
  >This field is to note any unexpected issues, hiccups, or occurrences related to this line item.</inlineHelpText>
    <label>Observations</label>
    <type>TextArea</type>
</CustomField>