force-app/main/default/objects/Logistics_Financials__c/fields/Unique_Category__c.field-meta.xml
<CustomField>
    <fullName>Unique_Category__c</fullName>
    <description
  >This field is used in conjunction with a before save flow to force all categories at an event to have a unique value.</description>
    <inlineHelpText
  >This field is used in conjunction with a before save flow to force all categories at an event to have a unique value.</inlineHelpText>
    <label>Unique Category</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>