force-app/main/default/objects/Logistics_Financials__c/validationRules/Category_Other_Requires_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Other_Requires_Notes</fullName>
    <active>false</active>
    <description
  >When Category is &quot;Other&quot;, the field &quot;Notes&quot; must be filled in.</description>
    <errorConditionFormula>ISPICKVAL(Category__c, &quot;Other&quot;)
&amp;&amp;
ISBLANK(Notes__c)</errorConditionFormula>
    <errorMessage
  >When Category is &quot;Other&quot;, the field &quot;Notes&quot; must be filled in.</errorMessage>
</ValidationRule>