force-app/main/default/objects/Logistics_Financials__c/validationRules/Notes_Required_For_Other1_5_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Required_For_Other1_5_Category</fullName>
    <active>true</active>
    <description
  >Notes field required before editing any currency fields when Category is Other 1-5.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Category__c, &quot;Other 1&quot;) ||
    ISPICKVAL(Category__c, &quot;Other 2&quot;) ||
    ISPICKVAL(Category__c, &quot;Other 3&quot;) ||
    ISPICKVAL(Category__c, &quot;Other 4&quot;) ||
    ISPICKVAL(Category__c, &quot;Other 5&quot;),

    ISBLANK(Notes__c),

    OR(
        ISCHANGED(Budget__c),
        ISCHANGED(Estimated_Cost__c),
        ISCHANGED(Last_Year_Actual__c),
        ISCHANGED(Next_Year_Budget__c)
    )
)</errorConditionFormula>
    <errorMessage
  >You must enter a value in Notes field before editing any currency fields when Category is Other 1-5.</errorMessage>
</ValidationRule>